k8s/talos/apps/home-assistant/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
  namespace: home-assistant
subsets:
  - addresses:
      - ip: 10.3.10.15
    ports:
      - name: http
        port: 8123
        protocol: TCP
